# hex_value

./: .gitignore  Cargo.toml  README.md
.cargo/: Config.toml
.github/: codecov.yml
.github/workflows/: check.yml  test.yml
src/: error.rs  hex_value.rs  lib.rs  shared_consts.rs
src/error/: io.rs  parse.rs
src/error/io/: unit_tests.rs  wrapped_std_io.rs
src/error/io/unit_tests/: as_file_create_err_cx.rs  as_file_open_err_cx.rs  as_file_read_err_cx.rs  as_file_write_err_cx.rs
src/error/io/wrapped_std_io/: unit_tests.rs
src/error/io/wrapped_std_io/unit_tests/: clone.rs  eq_partial_eq.rs
src/hex_value/: unit_tests.rs
src/hex_value/unit_tests/: as_decimal_string.rs  as_pretty_string.rs  as_string.rs  display.rs  from_str.rs  try_from.rs  value_and_width_bits_and_width_bytes.rs
src/shared_consts/msg/: en_us.rs
